--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main7Activity"/>
-        <activity android:name=".Main6Activity"/>
-        <activity android:name=".Main5Activity"/>
-        <activity android:name=".Main4Activity"/>
-        <activity android:name=".Main3Activity"/>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".Main2Activity"/>
-        <activity android:name=".Main8Activity">
+        <activity android:name=".Main8Activity"></activity>
+        <activity android:name=".Main7Activity" />
+        <activity android:name=".Main6Activity" />
+        <activity android:name=".Main5Activity" />
+        <activity android:name=".Main4Activity" />
+        <activity android:name=".Main3Activity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".Main9Activity"
+            android:theme="@style/AppTheme.NoActionBar">>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
